Avoid logos overlapping text in footer

--- a/themes/Sidebar/sidebar.css
+++ b/themes/Sidebar/sidebar.css
@@ -1437,6 +1437,10 @@ li#ca-watch, li#ca-unwatch, li#ca-varlang-0, li#ca-print {
     font-size: 90%;
 }
 
+#footer ul {
+    display: table-cell;
+}
+
 #footer li {
     display: inline;
     margin: 0 1.3em;
